<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/ad_cat2">
        <menu>
            <item
                android:id="@+id/ac_sign_up"
                android:title="@string/ac_sign_up"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/ac_sign_in"
                android:title="@string/ac_sign_in"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/ac_sign_out"
                android:title="@string/ac_sign_out"
                app:showAsAction="ifRoom"
                />
        </menu>
    </item>


</menu>